--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,26 @@
-name: My Workflow
+name: Generate Datas
 
 on:
-  push:
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm install
-      - name: Build the project
-        run: npm run build
-      - name: Create environment file
-        run: |
-          echo "BUILD_OUTPUT=path/to/output" >> $GITHUB_ENV
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
-          name: build-output
-          path: path/to/output
+          github_user_name: HEllanlins
+          svg_out_path: dist/github-contribution-grid-snake.svg
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
