--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,10 @@
+ - usos: crazy-max/ghaction-github-pages@v2.1.3
+    com:
+      target_branch: gh-pages
+      build_dir: dist
+    enviar:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 name: Generate Datas
 
 on:
